nuevos parallax responsivos

--- a/expo-style.css
+++ b/expo-style.css
@@ -53,6 +53,7 @@ p, li {
   color: #FFF;
   font-family: "Bodoni";
   text-align: justify;
+  word-wrap: break-word;
 }
 
 a {
@@ -60,12 +61,13 @@ a {
   line-height: 1.3rem;
 }
 
-a.caption {
+a.caption, p.caption {
   font-family: "Bodoni";
   font-style: italic;
   text-align: center;
   color: #FFF;
   margin-top: 1rem;
+  margin-bottom: 0;
 }
 
 #loader {
@@ -85,6 +87,18 @@ a.caption {
 /* ----------------------- MENU ----------------------- */
 .mini {
   width: 5.3%;
+}
+
+.modal-header h5 {
+  color: #000;
+  font-family: "HVD_Rowdy";
+  font-size: 1rem;
+}
+
+.button-facebook, .button-twitter {
+  color: #000;
+  font-family: "Bodoni";
+  font-size: 1rem;
 }
 
 .button-container {
@@ -256,7 +270,7 @@ a.caption {
 }
 
 .last {
-  background-image: url("work/models/memorica/recursos/img/champoton/splash-background.jpg");
+  background-image: url("work/models/memorica/recursos/img/champoton/creditos.jpg");
 }
 
 /* ----------------------- SALAS ----------------------- */
@@ -299,7 +313,7 @@ a.caption {
     line-height: 1.3rem;
   }
 
-  a.caption {
+  a.caption, p.caption {
     margin-top: 1rem;
   }
 
@@ -349,7 +363,7 @@ a.caption {
     line-height: 1.3rem;
   }
 
-  a.caption {
+  a.caption, p.caption {
     margin-top: 1rem;
   }
 
@@ -399,7 +413,7 @@ a.caption {
     line-height: 1.3rem;
   }
 
-  a.caption {
+  a.caption, p.caption {
     margin-top: 1rem;
   }
 
@@ -449,7 +463,7 @@ a.caption {
     line-height: 1.3rem;
   }
 
-  a.caption {
+  a.caption, p.caption {
     margin-top: 1rem;
   }
 
@@ -499,7 +513,7 @@ a.caption {
     line-height: 1.3rem;
   }
 
-  a.caption {
+  a.caption, p.caption {
     margin-top: 1rem;
   }
 
@@ -518,5 +532,25 @@ a.caption {
 
   .overlay ul li {
     min-height: 50px;
+  }
+
+  .cover {
+    background-image: url("work/models/memorica/recursos/img/champoton/splash-background-sm.jpg");
+  }
+
+  .first {
+    background-image: url("work/models/memorica/recursos/img/champoton/sala1-sm.jpg");
+  }
+
+  .second {
+    background-image: url("work/models/memorica/recursos/img/champoton/sala2-sm.jpg");
+  }
+
+  .third {
+    background-image: url("work/models/memorica/recursos/img/champoton/sala3-sm.jpg");
+  }
+
+  .last {
+    background-image: url("work/models/memorica/recursos/img/champoton/creditos-sm.jpg");
   }
 }
