--- a/expo-style.css
+++ b/expo-style.css
@@ -484,6 +484,31 @@ a.caption, p.caption {
     height: 4%;
     min-height: 50px;
   }
+
+  .cover {
+    background-image: url("work/models/memorica/recursos/img/champoton/splash-background-sm.jpg");
+    background-attachment: inherit;
+  }
+
+  .first {
+    background-image: url("work/models/memorica/recursos/img/champoton/sala1-sm.jpg");
+    background-attachment: inherit;
+  }
+
+  .second {
+    background-image: url("work/models/memorica/recursos/img/champoton/sala2-sm.jpg");
+    background-attachment: inherit;
+  }
+
+  .third {
+    background-image: url("work/models/memorica/recursos/img/champoton/sala3-sm.jpg");
+    background-attachment: inherit;
+  }
+
+  .last {
+    background-image: url("work/models/memorica/recursos/img/champoton/creditos-sm.jpg");
+    background-attachment: inherit;
+  }
 }
 
 /* Extra small devices (cellular telephones, 10px and up) */
@@ -521,6 +546,14 @@ a.caption, p.caption {
     width: 30%;
   }
 
+  .parallax {
+    min-height: 200px;
+    background-attachment: scroll;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
   .overlay nav {
     height: 70%;
     top: 55%;
@@ -528,14 +561,6 @@ a.caption, p.caption {
 
   .overlay ul li {
     min-height: 50px;
-  }
-
-  .parallax {
-    min-height: 200px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
 
   .cover {
